fix: align the naming of the Rating Indicator modifier classes

--- a/src/rating-indicator.scss
+++ b/src/rating-indicator.scss
@@ -15,11 +15,11 @@ $block: #{$fd-namespace}-rating-indicator;
     "compact": ("fontSize": 1rem, "spacingBetweenIcons": 0.125rem, "controlMargin": 0.5rem 0),
     "condensed": ("fontSize": 1rem, "spacingBetweenIcons": 0.125rem),
     "xs": ("fontSize": 0.75rem, "spacingBetweenIcons": 1px),
-    "s": ("fontSize": 1rem, "spacingBetweenIcons": 0.125rem),
-    "m": ("fontSize": 1.375rem, "spacingBetweenIcons": 0.1875rem),
-    "l": ("fontSize": 2rem, "spacingBetweenIcons": 0.25rem)
+    "sm": ("fontSize": 1rem, "spacingBetweenIcons": 0.125rem),
+    "md": ("fontSize": 1.375rem, "spacingBetweenIcons": 0.1875rem),
+    "lg": ("fontSize": 2rem, "spacingBetweenIcons": 0.25rem)
   );
-  $fd-rating-indicator-default-size: map-get($fd-rating-indicator-sizes, 'm');
+  $fd-rating-indicator-default-size: map-get($fd-rating-indicator-sizes, 'md');
   $fd-rating-indicator-default-font-size: map_get($fd-rating-indicator-default-size, "fontSize");
   $fd-rating-indicator-default-spacing-between-icons: map_get($fd-rating-indicator-default-size, "spacingBetweenIcons");
   $fd-rating-indicator-default-spacing-between-icons: map_get($fd-rating-indicator-default-size, "spacingBetweenIcons");
